--- a/found_in_translation/pubspec.yaml
+++ b/found_in_translation/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   camera: ^0.10.5+5
   image_picker: ^1.0.4
   path_provider: ^2.0.2
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
